--- a/bibtex.bib
+++ b/bibtex.bib
@@ -40,3 +40,15 @@
   year={2008},
   publisher={New Rider Press}
 }
+@misc{postgres-docs,
+      author = "The PostgreSQL Global Development Group",
+      title = "PostgreSQL: Documentation",
+      year = "2013",
+      url = "http://www.postgresql.org/docs/"
+}
+@book{saltzer2009principles,
+  title={Principles of computer system design: an introduction},
+  author={Saltzer, Jerome H and Kaashoek, M Frans},
+  year={2009},
+  publisher={Morgan Kaufmann}
+}
