Started writing the eXist update part, but some work is needed to decide what the queries are.

--- a/ads-coursework.tex
+++ b/ads-coursework.tex
@@ -965,6 +965,12 @@ return $programme
 \end{lstlisting}
 
 \subsubsection{I want to add a new programme}
+
+As we look at adding and updating information, it should be noted that
+the XQuery language itself does not directly support updating. The
+extension \emph{XQuery Update Facility}, however, adds this functionality
+to the XQuery language.
+
 \subsubsection{I want to add a new programme with new tags}
 \subsubsection{I want to add a new programme with a new category}
 \subsubsection{I want to correct a spelling mistake in a title}
