--- a/ads-coursework.tex
+++ b/ads-coursework.tex
@@ -9,6 +9,40 @@
   frame=single
 }
 
+\colorlet{punct}{red!60!black}
+\definecolor{background}{HTML}{EEEEEE}
+\definecolor{delim}{RGB}{20,105,176}
+\colorlet{numb}{magenta!60!black}
+
+\lstdefinelanguage{json}{
+    basicstyle=\normalfont\ttfamily,
+    numbers=left,
+    numberstyle=\scriptsize,
+    stepnumber=1,
+    numbersep=8pt,
+    showstringspaces=false,
+    breaklines=true,
+    frame=lines,
+    backgroundcolor=\color{background},
+    literate=
+     *{0}{{{\color{numb}0}}}{1}
+      {1}{{{\color{numb}1}}}{1}
+      {2}{{{\color{numb}2}}}{1}
+      {3}{{{\color{numb}3}}}{1}
+      {4}{{{\color{numb}4}}}{1}
+      {5}{{{\color{numb}5}}}{1}
+      {6}{{{\color{numb}6}}}{1}
+      {7}{{{\color{numb}7}}}{1}
+      {8}{{{\color{numb}8}}}{1}
+      {9}{{{\color{numb}9}}}{1}
+      {:}{{{\color{punct}{:}}}}{1}
+      {,}{{{\color{punct}{,}}}}{1}
+      {\{}{{{\color{delim}{\{}}}}{1}
+      {\}}{{{\color{delim}{\}}}}}{1}
+      {[}{{{\color{delim}{[}}}}{1}
+      {]}{{{\color{delim}{]}}}}{1},
+}
+
 \title{Advanced Database Systems Coursework}
 \author{Ross Fenning}
 
@@ -1028,9 +1062,259 @@ xmldb:remove('/db/programmes, $file-name)
 %$ <- makes emacs happy
 
 \section{Document Database}
+
+In this section, we will look at repeating the same design, implementation
+and query steps for the document-oriented database \emph{MongoDB}. Whilst
+XML databases are also normally considered also to be document-oriented,
+systems like MongoDB take a different approach and have different use
+cases.
+
 \subsection{Design}
+
+MongoDB is a NoSQL database that very much fits in with the idea of
+an aggregate-oriented system whereby we think about creating objects
+or aggregates that represent the items on which we will be wanting
+to do atomic updates and other operations.
+
+Following the design used for the XML documents, we can start with
+JSON (although strictly MongoDB is a BSON data store, we can theoretically
+treat JSON as equivalent for the purposes of design)
+documents that follow the same principles as shown in figure~\ref{fig:big-json-doc}.
+
+\begin{figure}[p]
+\begin{lstlisting}[language=json]
+  {
+    "pid": "abc123",
+    "complete_title": "Programme Title Here",
+    "media_type": "video",
+    "masterbrand": "bbc_one",
+    "is_clip": 0,
+    "availability": [
+      {
+        "start_time": new Date("2012-08-20T05:32:00"),
+        "end_time": new Date("2012-08-27T05:32:00"),
+        "service": "bbc_two"
+      }
+    "categories": [
+        {
+          "id": "910003",
+          "name": "drama",
+          "categories": [
+            {
+              "id": "9200018",
+              "name": "crime"
+            }
+          ]
+        }
+      ]
+    ]
+  }
+\end{listlisting}
+  \caption{JSON version of document structure as defined in XML earlier}
+  \label{fig:big-json-doc}
+\end{figure}
+
+As usual, the JSON port of the XML document designed earlier is somewhat
+terser and the information to markup ratio is favourable, but have we
+lost some of the hierachical structure that the XML offered? With
+XML databases, we can use XPath expressions to search for arbitrary
+descendants of a node, but that does not fit in with how best
+to model things in JSON/BSON and MongoDB.
+
+\subsubsection{Modelling categories}
+\label{sec:mongo-design-categories}
+
+The official MongoDB documentation\cite{mongo-categories} suggests
+a way to model categories that would lead to a programme category
+structure as shown in figure~\ref{fig:json-categories}. References
+to parent categories are shown using the provided ID strings, but
+MongoDB's built-in \emph{\_id} field could equally be used.
+
+\begin{figure}[p]
+\begin{lstlisting}[language=json]
+  [
+    {
+      "id": "910003",
+      "name": "drama"
+    },
+    {
+      "id": "9200018",
+      "name": "crime",
+      "parent": "910003",
+      "ancestors": [
+        {
+          "id": "910003",
+          "name": "drama"
+        }
+      ]
+    }
+  ]
+\end{listlisting}
+  \caption{Suggested method of modelling category hierarchies in MongoDB}
+  \label{fig:json-categories}
+\end{figure}
+
+This approach to modelling categories appears to have several benefits.
+Adding a new category, restucturing the hierarchy or correcting an
+existing category document all become reasonably simple operations, which
+we will hopefully see when we look at querying the database in
+section~\ref{sec:mongo-querying}.
+
+We have to be cautious, however, about the denormalisation of category
+names. In the example shown in figure~\ref{fig:json-categories}, the
+word ``drama'' appears not only in the \emph{drama} category document, but
+also in the ancestor object within the \emph{crime} category document.
+Should we want to rename that category, we have to ensure we update it
+in all places. This can be done in only two update operations (one
+for the category and one to update all ancestors at once), but
+that still leaves open the risk of inconsistency if one succeeds, but
+the other fails. Optionally, we could store only the IDs in the
+ancestors property, but we would lose the convenience of a single
+query being able to fetch a category and generate a ``bread crumb''
+trail in one operation. In this case, we should return again
+to specific software requirements as to whether we would want
+our application being able to fetch a programme with its full category
+bread crumb trail or whether we are happy for category hierarchies to
+be reconstructed from IDs and follow-up queries.
+
+It is this kind of denormalisation that is usually a strength of MongoDB.
+The NoSQL approach of moving away from pure relations and normal forms
+means that we can happily duplicate category names to support
+both a single, atomic query for all categories but also a query
+for a category and its bread crumb trail. This allows for client
+applications to make very performant queries that retrieve everything
+in single fetches, without having to think about join operations
+or building ``views'' as would be the case in some SQL databases. This
+feeds again into the aggregate-oriented approach where we think about
+the aggregate objects that have business value and make sense for our
+software to use instead of the mathematical purity of normalised,
+relational tables. It could be argued as a pragmatic approach for
+the right cases, but it clearly comes at a cost of consistency now
+being a concern of the sofware, not the data store.
+
+\subsubsection{Linking programmes and categories}
+
+Following the suggested use case of a category hierarchy described
+in section~\ref{sec:mongo-design-categories}, we have a design for
+category objects in our database. How do we model a programme
+being within a given category?
+
+One approach is to have a categories collection alongside the
+programmes collection. The categories field can then be a list
+of ID references to appropriate categories within the categories
+collection. This is closer to the relational model of having
+separate tables for different entities, but with MongoDB such
+references are not enforced as constraints in any way. It is
+entirely possible to have dangling references to categories
+that were removed.
+
+If we accept that application code can take on the responsibility
+of ensuring consistency, we can go further and create a
+``programmes'' property on each category document with a list
+of references to programmes within that category. Such a bidirectional
+set of references \emph{must} by enforced by the client (or bespoke
+middleware possibly using something like \emph{mongoengine}). We
+should see in section~\ref{sec:mongo-querying} that this allows for
+very powerful, single queries as long as the consistency trade-off
+is acceptable.
+
+\subsubsection{Availability}
+
+Leaving categories aside, we know that it is likely a client
+application will be wanting to query the programme model based
+on whether it is available to watch at the current time. Given
+that we are modelling the availability windows as a list/array
+type within the programme object, this would mean looking inside
+every array within every programme to find programmes where
+at least one window matches. In order to make this query
+less complex, we could create a collection of availability
+windows with references to their respective programmes as shown
+in figure~\ref{fig:mongo-availability-window}.
+
+\begin{figure}[p]
+\begin{lstlisting}[language=json]
+  {
+    "start_time": new Date("2012-08-20T05:32:00"),
+    "end_time": new Date("2012-08-27T05:32:00"),
+    "service": "bbc_two",
+    "programme": "abc123"
+  }
+\end{listlisting}
+  \caption{Availability window modelled in MongoDB}
+  \label{fig:mongo-availability-window}
+\end{figure}
+
+Modelling this as a separate collection is not only more
+normalised (even though MongoDB will not enforce foreign key
+constraints), but allows us to use some interesting features
+of MongoDB and apply them only to the availability collection.
+
+One feature that MongoDB provides is that of a TTL on documents
+within a certain collection. \cite{mongo-expiry} With this
+feature, we could well tell MongoDB to delete all availability
+windows straight after the end time is reached. This has implications
+of making sure the database is running on a server with accurate
+time (assuming time zones do not add further problems), but the
+benefit is that our queries for available programes do not even
+have to include time comparisons. If we are assured that the
+availability collection contains only windows for programmes
+that are avaiable right now, we simply have to query the collection
+for everything therin.
+
+A foreseeable problem with having a separate availability
+collection is that in the relational approach, we wanted to join
+availability to programmes and again to categories so as to find
+available programmes in a particular category -- something we
+cannot do in MongoDB (it is not designed to do so). Instead,
+the ``correct'' way to do this in line with MongoDB's ethos
+is to denormalise further and start to embed some of a
+programme's information within the availability window
+object as show in figure~\ref{fig:mongo-availability-denormal}.
+Note that the tags are also included as we may have a use
+case for searching by tag.
+
+\begin{figure}[p]
+\begin{lstlisting}[language=json]
+  {
+    "start_time": new Date("2012-08-20T05:32:00"),
+    "end_time": new Date("2012-08-27T05:32:00"),
+    "service": "bbc_two",
+    "programme": {
+      "pid": "abc123",
+      "categories": [{"id": "9100001", {"id": "9100002"}],
+      "tags": ["history", "romans"]
+    }
+  }
+\end{listlisting}
+  \caption{Availability window modelled with further denormalisation}
+  \label{fig:mongo-availability-denormal}
+\end{figure}
+
+\subsubsection{Dates and times}
+
+Note the use of Javascript date objects for start/end datetimes in our
+programme document in figure~\ref{fig:big-json-doc}. This is
+shown for illustration only as JSON lacks a definitive standard for date
+and time objects. The BSON format used by MongoDB internally does
+in fact support datetime fields, but this can be represented in a
+number of ways if JSON is used as the transport format. The Javascript
+date object notation is accepted by MongoDB in the shell, which
+will be assumed to be the query client for our implementation and
+querying, but other clients of MongoDB may choose very different
+ways of representing dates and times. For example, the
+Microsoft AJAX Library uses a special string format for dates in JSON:
+``/Date(1234567890)/''. \cite{ms-ajax-json-dates} Other libraries
+and clients may choose to write out the date as a string in ISO-8601 format,
+but it is hard to dismbiguate that from a string literal containing
+a date. It follows from the Principle of Least Astonishment again
+that we might not want our software ``magically'' interpreting
+string literals that happen to contain something that looks like a date
+and time as a date/time object.
+
 \subsection{Implementation}
 \subsection{Querying}
+\label{sec:mongo-querying}.
+
 \subsubsection{What can I watch right now?}
 \subsubsection{What categories are there?}
 \subsubsection{What subcategories are under my chosen category?}
