--- a/bibtex.bib
+++ b/bibtex.bib
@@ -41,14 +41,38 @@
   publisher={New Rider Press}
 }
 @misc{postgres-docs,
-      author = "The PostgreSQL Global Development Group",
-      title = "PostgreSQL: Documentation",
-      year = "2013",
-      url = "http://www.postgresql.org/docs/"
+      author={The PostgreSQL Global Development Group},
+      title={PostgreSQL: Documentation},
+      year={2013},
+      url={http://www.postgresql.org/docs/}
 }
 @book{saltzer2009principles,
   title={Principles of computer system design: an introduction},
   author={Saltzer, Jerome H and Kaashoek, M Frans},
   year={2009},
   publisher={Morgan Kaufmann}
+}
+@misc{mongo-categories,
+  author={10gen, Inc.},
+  title={Category Hierarchy -- MongoDB Manual 2.4.4},
+  year={2013},
+  url={http://docs.mongodb.org/manual/use-cases/category-hierarchy/}
+}
+@misc{mongo-indexing,
+  author={10gen, Inc.},
+  title={Indexing Overview -- MongoDB Manual 2.4.4},
+  year={2013},
+  url={http://docs.mongodb.org/manual/core/indexes/}
+}
+@misc{mongo-expiry,
+  author={10gen, Inc.},
+  title={Expire Data from Collections by Setting TTL -- MongoDB Manual 2.4.4},
+  year={2013},
+  url={http://docs.mongodb.org/manual/tutorial/expire-data/}
+}
+@misc{ms-ajax-json-dates
+  author={Bertrand Le Roy},
+  title={Dates and JSON},
+  year={2008},
+  url={http://weblogs.asp.net/bleroy/archive/2008/01/18/dates-and-json.aspx}
 }
